--- a/back-end/src/main/resources/static/index.html
+++ b/back-end/src/main/resources/static/index.html
@@ -9,8 +9,8 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-<link rel="stylesheet" href="styles.11d5b6d47c887b3d21cd.css"></head>
+<link rel="stylesheet" href="styles.f643d605ed711b52d3a5.css"></head>
 <body>
   <app-root></app-root>
-<script type="text/javascript" src="runtime.ec2944dd8b20ec099bf3.js"></script><script type="text/javascript" src="polyfills.fec146f4472ee5fb9cac.js"></script><script type="text/javascript" src="main.c4fee49d69ceba517bfb.js"></script></body>
+<script src="runtime-es2015.edb2fcf2778e7bf1d426.js" type="module"></script><script src="runtime-es5.edb2fcf2778e7bf1d426.js" nomodule defer></script><script src="polyfills-es5.725b302dd22df5ddea82.js" nomodule defer></script><script src="polyfills-es2015.dccba179310f3602d2ed.js" type="module"></script><script src="main-es2015.d9bdefead2ec098ed32a.js" type="module"></script><script src="main-es5.d9bdefead2ec098ed32a.js" nomodule defer></script></body>
 </html>
